
ChangeLog
 [ + added, - removed, * changed ]
 * 23Jan2018 Fixes Testsome wrapper calling PMPI_Waitsome instead of PMPI_Testsome (GitHub issue #3)
 * 09Jan2018 Added mutex to protect buffers' double frees from dying pthreads
 * 19Dec2017 Defer the initialization of each IO, DYNAMIC MEMORY and SYSTEM calls to the first time they are used
 * 13Dec2017 Increase maximum events for buffer transactions
 * 29Nov2017 Refactor utils function names
 + 09Nov2017 Extended pyextrae API with calls to nevent and neventandcounters
 * 27Oct2017 No longer set a value for OMP_NUM_THREADS if it was not defined by the user to avoid conflicts with schedulers that assign threads through omp_set_num_threads
 + 26Oct2017 Added header file extrae_version.h
 * 25Oct2017 Fixes compatibility issue accessing struct ucontext
 * 16Oct2017 Reduces maximum number of arguments in intel-kmpc wrappers
 + 13Oct2017 Added fallback mechanism for taskloop instrumentation that recovers from runtime internal copies of the instrumented parameters
 * 10Oct2017 Changes RECHECK_INIT macro so it also allocates nested helpers
 * 29Sep2017 Fixes missing OMP user functions in parallel loops
 * 29Sep2017 Fixes invalid reference to task_helper in GOMP_task and callme_task
 * 21Sep2017 Sampling macros now check if task events have to be stored
 * 10Aug2017 Fixes confusing error message when merger reaches quota limit
 * 20Jul2017 Fixed wrong dependencies with OMPT in OpenMP libraries
 * 13Jul2017 Upgrade to v3.5.0
 + 12Jul2017 New documentation using sphinx-doc
 * 12Jul2017 Fixes configure check for without-cuda and without-cupti
 * 10Jul2017 Make the I/O labels appear in the PCF only if each specific call has been used during the run
 * 10Jul2017 Include elapsed time outside MPI in Test* calls
 + 14Jun2017 Added instrumentation support for OpenMP taskloop and ordered directives
 * 6Jun2017 Make DLB available by default
 + 01Jun2017 Emits cpu_event for each OpenMP thread at least once